--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,9 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  sum_plugin:
+    git:
+      url: https://github.com/Daung/flutter_plugin.git
   flutter:
     sdk: flutter
 
@@ -30,6 +33,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   dio: ^4.0.0
   event_bus: ^2.0.0
+  dokit: ^0.2.12
+
 
 dev_dependencies:
   flutter_test:
